--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "fork-map"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 license = "MIT"
 description = "A crate for running operations in a child process spawned by `fork()`"
 keywords = ["parallel", "concurrency", "cursed"]
 categories = ["concurrency"]
-homepage = "https://github.com/CouleeApps/fork_map"
-documentation = "https://docs.rs/fork_map"
-repository = "https://github.com/CouleeApps/fork_map"
+homepage = "https://github.com/CouleeApps/fork-map"
+documentation = "https://docs.rs/fork-map"
+repository = "https://github.com/CouleeApps/fork-map"
 readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
