--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fork-map"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 license = "MIT"
 description = "A crate for running operations in a child process spawned by `fork()`"
@@ -16,6 +16,6 @@ readme = "README.md"
 [dependencies]
 anyhow = "1.0"
 libc = "0.2"
-serde = { version = "1.0", features = ["derive"] }
+serde = "1.0"
 serde-error = "0.1.2"
 serde_json = "1.0"
